<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">狐狸科技</string>
    <string name="subtype_label">狐狸科技</string>
    <string name="app_version">版本：4.2.3</string>
    <string name="app_description">这是一款为《我的世界》设计的辅助工具，提供多种功能，帮助玩家更好地体验游戏。\n 开发 ：Fsy \n UI设计：小小工具箱子</string>
    <string name="app_title">狐狸科技</string>
    <string name="instructions">本软件已伪装成键盘软件，需要前往设置打开此软件键盘选项，并勾选此软件使用，且需要前往我的世界打开全键盘玩法，数据注入仅供创作模式下使用，相应的本地房间，联机大厅，凭租服务器均可使用。</string>
    <string name="do_not_show_again">不再显示</string>
    <string name="check_overlay_permission">悬浮窗权限</string>
    <string name="overlay_permission_description">这将会显示悬浮窗有利于你的使用。</string>
    <string name="check_keyboard_enabled">键盘服务</string>
    <string name="keyboard_enabled_description">这将会伪装成键盘的一员，能起到部分防封。</string>
    <string name="check_keyboard_checked">检查键盘勾选</string>
    <string name="keyboard_checked_description">这将会作为键盘的形式启用功能。</string>
    <string name="why_get_banned">为什么在游玩的时候被封号了？</string>
    <string name="ban_reasons">被封的原因一般是以下几种:\n1.在hty或者是bjd等有检测挥手速度的服务器被检测到封禁了。\n2.有些服务器有暴击检测，你在同时使用兔子跳跃和自动点击的时候被封了。\n3.被玩家举报而封。</string>
    <string name="update_log">更新日志</string>
    <string name="update_content">本次更新内容如下:</string>
    <string name="start_floating_window">启动狐狸科技悬浮窗</string>
    <string name="close_floating_window">关闭狐狸科技悬浮窗</string>
    <string name="home_bottom_navigation_homepage">主页</string>
    <string name="home_bottom_navigation_settings">个人</string>
    <string name="open_service">开启服务</string>
    <string name="close_service">关闭服务</string>
    <string name="login_context">登录后享受更多权益 (^._.^)ﾉ</string>
    <string name="logout">退出登录</string>
    <string name="logout_description">安全退出当前账号</string>
    <string name="about_us">关于我们</string>
    <string name="about_description">应用信息、版本号</string>
    <string name="help_feedback">帮助与反馈</string>
    <string name="help_description">使用帮助、问题反馈</string>
    <string name="update_feedback">检查更新</string>
    <string name="update_description">检查当前是否有可更新版本</string>
    <string name="bulletin_title">公告栏</string>
    <string name="bulletin_content">公告内容加载中....</string>
    <string name="activity_settings">设置</string>
    <string name="modify_cps">CPS修改</string>
    <string name="modify_cps_message">修改功能执行的频率(CPS),仅在本次服务中保存</string>
    <string name="autoclick">自动点击</string>
    <string name="autoplace">自动放置</string>
    <string name="autojump">自动跳跃</string>
    <string name="autowalk">自动行走</string>
    <string name="entitycrash">实体崩服</string>
    <string name="addition">添加</string>
    <string name="remove">删除</string>
    <string name="edit">编辑</string>
    <string name="visualization_edit">可视化编辑</string>
    <string name="plugin">插件</string>
    <string name="plugin_manage">插件管理</string>
    <string name="plugin_unmount">卸载插件</string>
    <string name="plugin_sb_unmount">是否卸载\n %s(UUID:%s) 插件，他会消失，永远永远</string>
</resources>
