<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
     android:gravity="center"
     android:padding="16dp"
     android:orientation="vertical">

    <ImageView
         android:layout_height="30dp"
         android:layout_width="30dp"
         android:src="@mipmap/ic_launcher" />

    <TextView
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:layout_marginTop="5dp"
         android:textSize="15sp"
         android:textColor="#ffffff"
         android:id="@+id/textView"
         android:text="@string/app_name" />
      <TextView
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:layout_marginBottom="5dp"
         android:textSize="12sp"
         android:textColor="#ffffff"
         android:id="@+id/textView2"
         android:text="@string/app_version" />
      <TextView
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:layout_margin="5dp"
         android:textSize="10sp"
         android:textColor="#ffffff"
         android:id="@+id/textView3"
         android:text="@string/app_description" />

</LinearLayout>